install/ingress-argo-server-ui.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${ARGO_FQDN}`) || Host(`argo.lan`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: ${TLS_CERT_SECRET_NAME}
